[package]
name = "clip-clip"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
eyre = "0.6.12"
geo = { version = "0.28.0", features = ["serde", "use-serde"] }
geo-clipper = "0.8.0"
geojson = { version = "0.24.1", features = ["geo-types"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
